--- a/ABM.Paie/Layout/MainHeader.razor
+++ b/ABM.Paie/Layout/MainHeader.razor
@@ -29,7 +29,7 @@
 	var experienceActivator = new MenuButton("Expérience");
 	var experienceItems = new MenuButton[]
 	{
-		new("Curriculum vitae", "resources/ABMq_CV.pdf", true),
+		new("Curriculum vitae", "/resources/ABMq_CV.pdf", true),
 		new("Salariée Silae", $"/{nameof(Experience)}/Silae"),
 		new("Formatrice Silae en chiffres", $"/{nameof(Experience)}/Chiffres"),
 		new("Étudiante CAFEL", $"/{nameof(Experience)}/Cafel"),
