--- a/ABM.Paie/Layout/MainFooter.razor
+++ b/ABM.Paie/Layout/MainFooter.razor
@@ -1,149 +1,150 @@
 ﻿@using ABM.Paie.Pages
+@using ABM.Paie.Resources
 
 <div class="d-flex flex-wrap justify-center" style="padding:20px 0px;max-width:1000px;">
-	<div style="padding:20px;width:400px;">
-		<MudButton Class="white-text" Variant="Variant.Text" Href="/">
-			<MudText Typo="Typo.h5">
-				<b>Accueil</b>
-			</MudText>
-		</MudButton>
+    <div style="padding:20px;width:400px;">
+        <MudButton Class="white-text" Variant="Variant.Text" Href="/">
+            <MudText Typo="Typo.h5">
+                <b>Accueil</b>
+            </MudText>
+        </MudButton>
 
-		<br />
+        <br />
 
-		<MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Formation)}")" Style="margin:40px 0px 0px 0px;">
-			<MudText Typo="Typo.h5">
-				<b>Formations</b>
-			</MudText>
-		</MudButton>
-		<br />
-		<MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Formation)}/Catalogue")" Style="padding:0px 8px">
-			<MudText>
-				Catalogue en ligne
-			</MudText>
-		</MudButton>
-		<br />
-		<MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Formation)}/Perfectionnement")" Style="padding:0px 8px">
-			<MudText>
-				Perfectionnement
-			</MudText>
-		</MudButton>
-	</div>
-	<div style="padding:20px;width:400px;">
-		<MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Actualite)}")">
-			<MudText Typo="Typo.h5">
-				<b>Actualités</b>
-			</MudText>
-		</MudButton>
+        <MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Formation)}")" Style="margin:40px 0px 0px 0px;">
+            <MudText Typo="Typo.h5">
+                <b>Formations</b>
+            </MudText>
+        </MudButton>
+        <br />
+        <MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Formation)}/Catalogue")" Style="padding:0px 8px">
+            <MudText>
+                Catalogue en ligne
+            </MudText>
+        </MudButton>
+        <br />
+        <MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Formation)}/Perfectionnement")" Style="padding:0px 8px">
+            <MudText>
+                Perfectionnement
+            </MudText>
+        </MudButton>
+    </div>
+    <div style="padding:20px;width:400px;">
+        <MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Actualite)}")">
+            <MudText Typo="Typo.h5">
+                <b>Actualités</b>
+            </MudText>
+        </MudButton>
 
-		<br />
+        <br />
 
-		<MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(AbmPaie)}")" Style="margin:40px 0px 0px 0px;">
-			<MudText Typo="Typo.h5">
-				<b>ABM Paie</b>
-			</MudText>
-		</MudButton>
-		<br />
-		<MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(AbmPaie)}/Organigramme")" Style="padding:0px 8px">
-			<MudText>
-				Organigramme
-			</MudText>
-		</MudButton>
-		<br />
-		<MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(AbmPaie)}/Equipe")" Style="padding:0px 8px">
-			<MudText>
-				Équipe pédagogique
-			</MudText>
-		</MudButton>
-		<br />
-		<MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(AbmPaie)}/Indicateurs")" Style="padding:0px 8px">
-			<MudText>
-				Les indicateurs formation
-			</MudText>
-		</MudButton>
-		<br />
-		<MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(AbmPaie)}/Valeurs")" Style="padding:0px 8px">
-			<MudText>
-				Mes valeurs
-			</MudText>
-		</MudButton>
-		<br />
-		<MudButton Class="pink-text text-darken-4" Variant="Variant.Text" Href="@($"/{nameof(AbmPaie)}/Assistance")" Style="padding:0px 8px">
-			<MudText>
-				<b>Référente Assistance technique et pédagogie</b>
-			</MudText>
-		</MudButton>
-		<br />
-		<MudButton Class="pink-text text-darken-4" Variant="Variant.Text" Href="@($"/{nameof(AbmPaie)}/Handicap")" Style="padding:0px 8px">
-			<MudText>
-				<b>Référente Handicap</b>
-			</MudText>
-		</MudButton>
-	</div>
-	<div style="padding:20px;width:400px;">
-		<MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Experience)}")">
-			<MudText Typo="Typo.h5">
-				<b>Expérience</b>
-			</MudText>
-		</MudButton>
-		<br />
-		<MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Experience)}/Silae")" Style="padding:0px 8px">
-			<MudText>
-				Salariée Silae
-			</MudText>
-		</MudButton>
-		<br />
-		<MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Experience)}/Chiffres")" Style="padding:0px 8px">
-			<MudText>
-				Formatrice Silae en chiffres
-			</MudText>
-		</MudButton>
-		<br />
-		<MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Experience)}/Cafel")" Style="padding:0px 8px">
-			<MudText>
-				Étudiante Cafel
-			</MudText>
-		</MudButton>
+        <MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(AbmPaie)}")" Style="margin:40px 0px 0px 0px;">
+            <MudText Typo="Typo.h5">
+                <b>ABM Paie</b>
+            </MudText>
+        </MudButton>
+        <br />
+        <MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(AbmPaie)}/Organigramme")" Style="padding:0px 8px">
+            <MudText>
+                Organigramme
+            </MudText>
+        </MudButton>
+        <br />
+        <MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(AbmPaie)}/Equipe")" Style="padding:0px 8px">
+            <MudText>
+                Équipe pédagogique
+            </MudText>
+        </MudButton>
+        <br />
+        <MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(AbmPaie)}/Indicateurs")" Style="padding:0px 8px">
+            <MudText>
+                Les indicateurs formation
+            </MudText>
+        </MudButton>
+        <br />
+        <MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(AbmPaie)}/Valeurs")" Style="padding:0px 8px">
+            <MudText>
+                Mes valeurs
+            </MudText>
+        </MudButton>
+        <br />
+        <MudButton Class="pink-text text-darken-4" Variant="Variant.Text" Href="@($"/{nameof(AbmPaie)}/Assistance")" Style="padding:0px 8px">
+            <MudText>
+                <b>Référente Assistance technique et pédagogie</b>
+            </MudText>
+        </MudButton>
+        <br />
+        <MudButton Class="pink-text text-darken-4" Variant="Variant.Text" Href="@($"/{nameof(AbmPaie)}/Handicap")" Style="padding:0px 8px">
+            <MudText>
+                <b>Référente Handicap</b>
+            </MudText>
+        </MudButton>
+    </div>
+    <div style="padding:20px;width:400px;">
+        <MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Experience)}")">
+            <MudText Typo="Typo.h5">
+                <b>Expérience</b>
+            </MudText>
+        </MudButton>
+        <br />
+        <MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Experience)}/Silae")" Style="padding:0px 8px">
+            <MudText>
+                Salariée Silae
+            </MudText>
+        </MudButton>
+        <br />
+        <MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Experience)}/Chiffres")" Style="padding:0px 8px">
+            <MudText>
+                Formatrice Silae en chiffres
+            </MudText>
+        </MudButton>
+        <br />
+        <MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Experience)}/Cafel")" Style="padding:0px 8px">
+            <MudText>
+                Étudiante Cafel
+            </MudText>
+        </MudButton>
 
-		<br />
+        <br />
 
-		<MudMenu AnchorOrigin="Origin.BottomRight" TransformOrigin="Origin.BottomLeft" Dense="true" Style="margin:40px 0px 0px 0px;">
-			<ActivatorContent>
-				<MudButton Class="white-text" Variant="Variant.Text" EndIcon="@Icons.Material.Filled.KeyboardArrowDown"><MudText Typo="Typo.h5"><b>Partenariats</b></MudText></MudButton>
-			</ActivatorContent>
-			<ChildContent>
-				<MudMenuItem Href="https://www.facilaepaie.com" Target="_blank">Facilae Paie</MudMenuItem>
-			</ChildContent>
-		</MudMenu>
-	</div>
-	<div style="padding:20px;width:400px;">
-		<MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Contact)}")">
-			<MudText Typo="Typo.h5">
-				<b>Contact</b>
-			</MudText>
-		</MudButton>
-		<br />
-		<MudButton Class="pink darken-3 white-text" Variant="Variant.Text" StartIcon="@Icons.Material.TwoTone.CalendarMonth" Style="padding:0px 8px" Href="@($"/{nameof(Contact)}/Rdv")">
-			<MudText>
-				Prise de rendez-vous
-			</MudText>
-		</MudButton>
-		<br />
-		<MudButton Class="white-text" Variant="Variant.Text" StartIcon="@Icons.Material.TwoTone.Email" Style="padding:0px 8px" Href="mailto:paie-formation@abmq.fr">
-			<MudText>
-				paie-formation@abmq.fr
-			</MudText>
-		</MudButton>
-		<br />
-		<div class="d-flex align-center">
-			<MudIcon Icon="@Icons.Material.TwoTone.Phone" Title="Phone" Size="Size.Small" Style="margin:0px 0px 0px 5px;" />
-			<MudIcon Icon="@Icons.Material.TwoTone.Textsms" Size="Size.Small" Style="margin:0px 0px 0px 5px;" />
-			<img src="/images/whatsapp/Digital_Glyph_White.png" alt="WhatsApp" height="18" style="margin:0px 0px 0px 7px;" />
-			<MudText Class="white-text" Style="margin:0px 0px 0px 8px;">
-				+33 7 48 10 65 39
-			</MudText>
-		</div>
-		<div class="d-flex align-center" style="margin:10px 0px 0px 0px;">
-			<a href="https://www.linkedin.com/in/abm-paie-1b551a336" target="_blank"><img src="/images/linkedin/LI-Logo.png" alt="LinkedIn" height="20" style="margin:8px;" /></a>
-		</div>
-	</div>
+        <MudMenu AnchorOrigin="Origin.BottomRight" TransformOrigin="Origin.BottomLeft" Dense="true" Style="margin:40px 0px 0px 0px;">
+            <ActivatorContent>
+                <MudButton Class="white-text" Variant="Variant.Text" EndIcon="@Icons.Material.Filled.KeyboardArrowDown"><MudText Typo="Typo.h5"><b>Partenariats</b></MudText></MudButton>
+            </ActivatorContent>
+            <ChildContent>
+                <MudMenuItem Href="https://www.facilaepaie.com" Target="@Constants.Blank">Facilae Paie</MudMenuItem>
+            </ChildContent>
+        </MudMenu>
+    </div>
+    <div style="padding:20px;width:400px;">
+        <MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Contact)}")">
+            <MudText Typo="Typo.h5">
+                <b>Contact</b>
+            </MudText>
+        </MudButton>
+        <br />
+        <MudButton Class="pink darken-3 white-text" Variant="Variant.Text" StartIcon="@Icons.Material.TwoTone.CalendarMonth" Style="padding:0px 8px" Href="@($"/{nameof(Contact)}/Rdv")">
+            <MudText>
+                Prise de rendez-vous
+            </MudText>
+        </MudButton>
+        <br />
+        <MudButton Class="white-text" Variant="Variant.Text" StartIcon="@Icons.Material.TwoTone.Email" Style="padding:0px 8px" Href="mailto:paie-formation@abmq.fr">
+            <MudText>
+                paie-formation@abmq.fr
+            </MudText>
+        </MudButton>
+        <br />
+        <div class="d-flex align-center">
+            <MudIcon Icon="@Icons.Material.TwoTone.Phone" Title="Phone" Size="Size.Small" Style="margin:0px 0px 0px 5px;" />
+            <MudIcon Icon="@Icons.Material.TwoTone.Textsms" Size="Size.Small" Style="margin:0px 0px 0px 5px;" />
+            <img src="/images/whatsapp/Digital_Glyph_White.png" alt="WhatsApp" height="18" style="margin:0px 0px 0px 7px;" />
+            <MudText Class="white-text" Style="margin:0px 0px 0px 8px;">
+                +33 7 48 10 65 39
+            </MudText>
+        </div>
+        <div class="d-flex align-center" style="margin:10px 0px 0px 0px;">
+            <a href="https://www.linkedin.com/in/abm-paie-1b551a336" target="@Constants.Blank"><img src="/images/linkedin/LI-Logo.png" alt="LinkedIn" height="20" style="margin:8px;" /></a>
+        </div>
+    </div>
 </div>
